<resources>
    <string name="app_name">Newsly</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="haveacount">Already have an account?</string>
    <string name="signup">Signup</string>
    <string name="notacount">Do not have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="favorites">Favorites</string>
</resources>